clusters/production/apps/skylens-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skylens-production
  labels:
    app.kubernetes.io/part-of: skylens-production
